--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="space"></div>
         <div class="space"></div>
 
-        <li>Water is used to turn the turbine. That create electricity.</li>
+        <li>Water is used to turn the turbine. This creates electricity.</li>
 
         <label>Advantages</label>
         <div class="space"></div>
