--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="space"></div>
         <div class="space"></div>
 
-        <li>Solar power uses solar panels to convent the sun's unlimited sunlight to electricity, which can be used to
-            power homes and appliences.</li>
+        <li>Solar power uses solar panels to convert the sun's unlimited sunlight to electricity, which can be used to
+            power homes and appliances.</li>
 
         <label>Advantages</label>
         <div class="space"></div>
@@ -57,8 +57,7 @@
         <div class="space"></div>
         <li>Solar Panels need a lot of space on the roof</li>
         <li>Solar Panels are not very costly, but they aren't very cheap either. An investment would be required.</li>
-        <li>Solar Panels need a lot of sunlight, and it there is no sunlight where you set it up, it won't be of any
-            use.</li>
+        <li>In absence of abundant sunlight, the solar panel won't give electricity</li>
         <!-- Solar Energy End -->
     </ul>
     <ul id="wind">
